grammar.js
        source_file: $ => $.module_part,
        module_part: $ => seq(repeat($.import_decl), repeat1($.module_defn)),
        //TODO: use this import specification with swan lake, 1.2 has a different import syntax
        //import_decl: $ => seq("import", optional(seq($.org_name, "/")), $.module_name, optional(seq("as", $.import_prefix)), ";"),
        module_defn: $ => choice(
            $.function_defn,
            $.const_defn,
            $.type_defn,
            $.statement,
            $.class_defn,
            $.enum_decl,
        ),
        function_defn: $ => seq(optional("public"),
            "function",
            $.identifier,
            $.signature,
            choice($.stmt_block,
                $.expr_function_body)),
        signature: $ => prec(3, seq("(", optional($.param_list), ")", optional(seq("returns", $.type_desc)))),

        final_defn: $ => seq("final", $.typed_binding_pattern, "=", $.expression, ";"),
        type_desc: $ => prec(1, choice(
            $.union_type_desc,
            $.intersection_type_desc,
            $.postfix_type_desc,
            $.object_type_desc,
            $.function_type_desc
        )),
        postfix_type_desc: $ => choice(
            $.primary_type_desc,
            $.optional_type_desc,
            $.array_type_desc
        ),

        array_type_desc: $ => prec.right(seq($.array_member_type_desc, repeat1($.array_dimensions))),
        array_dimensions: $ => seq("[", optional($.array_length), "]"),
        array_member_type_desc: $ => choice(
            $.type_desc
        ),
        primary_type_desc: $ => choice(
            $.nil_type_desc,
            $.singleton_type_desc,
            seq("(", $.type_desc, ")"),
            $.type_reference,
            $.builtin_type_name,
            $.map_type_desc,
            $.record_type_desc,
            $.tuple_type_desc
        ),

        builtin_type_name: $ => prec.left(choice(
            "any",
            "anydata",
            "boolean",
            "byte",
            "error",
            "float",
            "int",
            "readonly",
            "string",
        )),

        type_reference: $ => prec(3, choice(
            $.identifier,
            $.qualified_identifier,
            $.builtin_type_qualified_identifier
        )),
        // This is a hack to make types like string:Char to work
        // otherwise it will match up the string and break
        stmt_block: $ => seq("{", repeat($.statement), "}"),

        statement: $ => choice(
            $.local_no_init_var_decl_stmt,
            $.local_var_decl_stmt,
            $.call_stmt,
            $.assign_stmt,
            $.compound_assign_stmt,
            $.destructuring_assign_stmt,
            $.return_stmt,
            $.if_else_stmt,
            $.while_stmt,
            $.break_stmt,
            $.continue_stmt,
            $.foreach_stmt,
            $.panic_stmt,
            $.match_stmt,
            $.final_defn
        ),

        local_no_init_var_decl_stmt: $ => seq(optional("final"), $.typed_binding_pattern, ";"),
        local_var_decl_stmt: $ => seq($.typed_binding_pattern, "=", $.expression, ";"),
        binding_pattern: $ => choice(
            $.identifier,
            $.wildcard_binding_pattern
        ),

        variable_reference_expr: $ => $.identifier,
        foreach_stmt: $ => seq("foreach", $.typed_binding_pattern, "in", $.expression, $.stmt_block),

        expression: $ => choice(
            $.new_expression,
            $.inner_expr,
            $.type_cast_expr,
            $.list_constructor_expr,
            $.mapping_constructor_expr,
            $.query_expr
        ),

        new_expression: $ => choice($.explicit_new_expression, $.implicit_new_expression),
        explicit_new_expression: $ => seq("new", $.const_reference_expr, $.arg_list),
        implicit_new_expression: $ => seq("new", optional($.arg_list)),
        const_reference_expr: $ => prec(1, choice($.identifier, $.qualified_identifier)),

        inner_expr: $ => prec.left(choice(
            $.logical_expr,
            $.nil_lifted_expr,
            $.equality_expr,
            $.relational_expr,
            $.primary_expr
        )),
        primary_expr: $ => choice(
            $.literal,
            $.error_constructor_expr,
            $.member_access_expr,
            $.field_access_expr,
            $.call_expr,
            $.variable_reference_expr,
            $.conditional_expr,
            seq("(", $.inner_expr, ")")
        ),

        typed_binding_pattern: $ => seq($.inferable_type_desc, $.binding_pattern),
        inferable_type_desc: $ => choice("var", $.type_desc),

        literal: $ => prec(1, choice(
            $.nil_literal,
            $.boolean_literal,
            $.int_literal,
            $.floating_point_literal,
            $.string_literal
        )),
        list_constructor_expr: $ => seq("[", optional($.expr_list), "]"),
        arg_list: $ => choice(
            seq("(", $.positional_args, optional(seq(",", $.other_args)), ")"),
            seq("(", optional($.other_args), ")")
        ),
        positional_args: $ => prec.right(seq($.positional_arg, repeat(seq(",", $.positional_arg)))),
        positional_arg: $ => $.expression,
        qualified_identifier: $ => seq($.module_prefix, ":", $.identifier),
        module_prefix: $ => prec(2, choice($.identifier)),

        variable_reference_expr: $ => choice(
            $.identifier,
            $.qualified_identifier
        ),

        int_literal: $ => prec(1, choice(
            $.decimal_number,
            $.hex_int_literal
        )),
        decimal_number: $ => choice(
            "0",
            seq($.non_zero_digit, repeat($.digit))
        ),
        non_zero_digit: $ => /[1-9]/,
        digit: $ => /[0-9]/,
        identifier: $ => /[A-Za-z][A-Za-z0-9_]*/,
